--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,50 @@
   --color-type-dark: #3d413f;
 
   --color-brand-0: #ffffff;
-  --color-brand-0_5: #f5f4f5;
-  --color-brand-1: #eaeaeb;
-  --color-brand-2: #d6d4d6;
-  --color-brand-3: #c1bfc2;
-  --color-brand-4: #ada9ad;
-  --color-brand-5: #989499;
-  --color-brand-6: #5c5a5d;
-  --color-brand-7: #3f3d3f;
-  --color-brand-8: #212021;
-  --color-brand-9: #030303;
+  --color-brand-50: #f5f4f5;
+  --color-brand-100: #eaeaeb;
+  --color-brand-200: #d6d4d6;
+  --color-brand-300: #c1bfc2;
+  --color-brand-400: #ada9ad;
+  --color-brand-500: #989499;
+  --color-brand-600: #5c5a5d;
+  --color-brand-700: #3f3d3f;
+  --color-brand-800: #212021;
+  --color-brand-900: #030303;
+
+  --spacing-3xs: 0.125rem; /* 2px */
+  --spacing-2xs: 0.25rem; /* 4px */
+  --spacing-xs: 0.5rem; /* 8px */
+  --spacing-s: 0.75rem; /* 12px */
+  --spacing-m: 1rem; /* 16px */
+  --spacing-l: 1.25rem; /* 20px */
+  --spacing-xl: 1.5rem; /* 24px */
+  --spacing-2xl: 2rem; /* 32px */
+  --spacing-3xl: 2.5rem; /* 40px */
+  --spacing-4xl: 4rem; /* 64px */
+
+  --font-size-display1: 1.5rem;
+  --font-size-headline: 1.25rem;
+  --font-size-subheadline: 1rem;
+  --font-size-link: 0.875rem;
+  --font-size-body: 0.875rem;
+  --font-size-caption: 0.75rem;
+
+  --font-weight-display1: 600;
+  --font-weight-headline: 600;
+  --font-weight-subheadline: 600;
+  --font-weight-link: 600;
+  --font-weight-body: 400;
+  --font-weight-caption: 400;
+}
+
+@media (max-width: 768px) {
+  :root {
+    --font-size-display1: 1.5rem;
+    --font-size-headline: 1.25rem;
+    --font-size-subheadline: 1rem;
+    --font-size-link: 0.875rem;
+    --font-size-body: 0.875rem;
+    --font-size-caption: 0.75rem;
+  }
 }
