--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: 'Kanit', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -64,13 +64,20 @@
   --font-weight-body: 400;
   --font-weight-caption: 400;
 
+  --font-line-height-display1: 2.5rem;
+  --font-line-height-headline: 2rem;
+  --font-line-height-subheadline: 1.5rem;
+  --font-line-height-link: 1.25rem;
+  --font-line-height-body: 1.25rem;
+  --font-line-height-caption: 1rem;
+
   /* Shadows */
-  --shadow-s: 0px 2px 3px -1px var(--color-accent),
-    0px 5px 10px -2px var(--color-accent);
-  --shadow-s: 0px 4px 6px -2px var(--color-accent),
-    0px 10px 15px -3px var(--color-accent);
-  --shadow-s: 0px 6px 8px -3px var(--color-accent),
-    0px 15px 20px -5px var(--color-accent);
+  --shadow-s: 0px 2px 3px -1px rgba(125, 59, 236, 0.07),
+    0px 5px 10px -2px rgba(125, 59, 236, 0.15);
+  --shadow-m: 0px 4px 6px -2px rgba(125, 59, 236, 0.07),
+    0px 10px 15px -3px rgba(125, 59, 236, 0.15);
+  --shadow-l: 0px 6px 8px -3px rgba(125, 59, 236, 0.07),
+    0px 15px 20px -5px rgba(125, 59, 236, 0.15);
 
   /* Radius */
 
@@ -91,5 +98,12 @@
     --font-size-link: 0.875rem;
     --font-size-body: 0.875rem;
     --font-size-caption: 0.75rem;
+
+    --font-line-height-display1: 2rem;
+    --font-line-height-headline: 1.75rem;
+    --font-line-height-subheadline: 1.25rem;
+    --font-line-height-link: 1.125rem;
+    --font-line-height-body: 1.25rem;
+    --font-line-height-caption: 1rem;
   }
 }
