--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -62,7 +62,7 @@
 .tags {
   display: flex;
   justify-content: center;
-  gap: var(--spacing-2xs);
+  gap: var(--spacing-xs);
 
   /* margin-top: 52px; */
 }
@@ -91,8 +91,6 @@
   justify-content: center;
   align-items: center;
   gap: var(--spacing-m);
-
-  margin-top: 8px;
 
   height: var(--spacing-2xl);
   font-size: var(--font-size-caption);
@@ -132,7 +130,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-3xs);
-  margin-top: 8px;
 }
 
 .stat-item {
