--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 :root {
   font-family: 'Kanit', sans-serif;
   background-color: var(--color-brand-50);
+  color: var(--color-brand-900);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
