--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -10,31 +10,36 @@
   border: 1px solid var(--color-brand-300);
   border-radius: var(--radius-s);
   background-color: var(--color-brand-100);
+  &:has(input:focus) {
+    border-color: var(--color-accent);
+  }
 }
 
 .icon {
   width: var(--spacing-xl);
   height: var(--spacing-xl);
 
-path {
+  path {
     stroke: var(--color-brand-400);
-}  
+  }
 }
-
 
 .searchInput {
-    border: none;
-    background-color: inherit;
+  border: none;
+  background-color: inherit;
+  width: 100%;
 
-    font-size: var(--font-size-body);
-    font-weight: var(--font-weight-body);
-    line-height: var(--line-height-body);
-    font-family: inherit;
+  font-size: var(--font-size-body);
+  font-weight: var(--font-weight-body);
+  line-height: var(--line-height-body);
+  font-family: inherit;
 
-    color: var(--color-brand-600);
+  color: var(--color-brand-600);
 
-    &:focus {
-        outline: none;
-    }
+  &:focus {
+    outline: none;
+  }
+  &:not(:placeholder-shown) {
+    color: var(--color-brand-900);
+  }
 }
-
