--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -4,7 +4,8 @@
   gap: var(--spacing-m);
 
   max-width: 600px;
-  margin: var(--spacing-4xl) auto;
+  margin-bottom: var(--spacing-4xl);
+  margin-inline: auto;
   padding: var(--spacing-s) var(--spacing-m);
 
   border: 1px solid var(--color-brand-300);
