--- a/src/Components/SearchBar/SearchBar.module.css
+++ b/src/Components/SearchBar/SearchBar.module.css
@@ -1,9 +1,9 @@
 .searchBar {
   display: flex;
-  align-items: center;
   gap: var(--spacing-m);
 
   max-width: 600px;
+
   margin-bottom: var(--spacing-4xl);
   margin-inline: auto;
   padding: var(--spacing-s) var(--spacing-m);
@@ -11,12 +11,13 @@
   border: 1px solid var(--color-brand-300);
   border-radius: var(--radius-s);
   background-color: var(--color-brand-100);
+
   &:has(input:focus) {
     border-color: var(--color-accent);
   }
 }
 
-.icon {
+.searchIcon {
   width: var(--spacing-xl);
   height: var(--spacing-xl);
 
@@ -26,21 +27,22 @@
 }
 
 .searchInput {
-  border: none;
-  background-color: inherit;
   width: 100%;
-
+  
   font-size: var(--font-size-body);
   font-weight: var(--font-weight-body);
   line-height: var(--line-height-body);
   font-family: inherit;
 
-  color: var(--color-brand-600);
+  border: none;
+  background-color: inherit;
+  color: var(--color-brand-900);
 
   &:focus {
     outline: none;
   }
-  &:not(:placeholder-shown) {
-    color: var(--color-brand-900);
+
+  &:placeholder-shown {
+    color: var(--color-brand-600);
   }
 }
