--- a/src/Components/CardList/CardList.module.css
+++ b/src/Components/CardList/CardList.module.css
@@ -6,4 +6,31 @@
   max-width: 920px;
 
   margin-inline: auto;
+  border: 2px solid red;
 }
+.cardContainer {
+  border: 1px solid blue;
+  position: relative;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: center right;
+  transition: transform 1s;
+  &.showBack {
+    background-color: red;
+    transform: translateX(-100%) rotateY(-180deg);
+  }
+}
+/* .cardContainer showBack {
+  transform: translateX(-100%) rotateY(-180deg);
+} */
+
+/* .card {
+  position: relative;
+  &.showBack {
+    transform: translateX(-100%) rotateY(-180deg);
+  }
+} */
+
+/* .showBack {
+  transform: translateX(-100%) rotateY(-180deg);
+} */
